Some fixes on modules and paths

--- a/Hub/Apps/Light/Light/index.html
+++ b/Hub/Apps/Light/Light/index.html
@@ -1,11 +1,11 @@
-﻿<script type="text/javascript" src="../Dashboard/Dashboardweb/homeos-1.1.js"></script> 
+﻿<script type="text/javascript" src="../GuiWeb/homeos-1.1.js"></script> 
 <!DOCTYPE html> 
 <html lang="en" class="js-disabled home">
 <head> 
-    <title>Thermometer | HomeOS</title> 
+    <title>Light | HomeOS</title> 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" /> 
-    <script type="text/javascript" src="../Dashboard/Dashboardweb/jquery-1.7.1.js"></script> 
-    <script type="text/javascript" src="../Dashboard/Dashboardweb/common.js"></script> 
+    <script type="text/javascript" src="../GuiWeb/jquery-1.7.1.js"></script> 
+    <script type="text/javascript" src="../GuiWeb/common.js"></script> 
     <link rel="Stylesheet" type="text/css" href="Styles/AppAlertsStyleSheet.css" />
     <script>
         var currentLight = 0;
