- fixing Json format (was wrong) - uncomment OnNotification in AppLight

--- a/Hub/Apps/Light/Light/index.html
+++ b/Hub/Apps/Light/Light/index.html
@@ -26,7 +26,8 @@
         }
 
         function RefreshLightCallback(context, result) {
-            currentLight = result.GetLightResult; $("#lightValue").text(currentLight.toString());
+            currentLight = result.GetLightResult;
+            $("#lightValue").text(currentLight.toString());
             updateColors();
         }
         function updateColors() {
@@ -49,7 +50,7 @@
 <body> 
     <div class="dashboard_toolbar"> 
         <div class="homeID_title"><a href="../GuiWeb/index.html">Dashboard</a> | Light </div> </div>
-
+    TestXXX
     <div class="page"> 
         <div class="row"> 
             <div class="page_title col">Light</div> 
