changing style:none --> style:normal (divDebugInfo) to see more while debugging

--- a/Hub/Dashboard/DashboardWeb/AddDeviceFinalDeviceSetup.html
+++ b/Hub/Dashboard/DashboardWeb/AddDeviceFinalDeviceSetup.html
@@ -69,7 +69,7 @@
     </div>
  
 <!-- Change display style to 'normal' to show debug information and 'none' to turn it off  -->
-<div id="divDebugInfo" style="display:none">Test</div>
+<div id="divDebugInfo" style="display:normal">Test</div>
 
        
 </div>
