--- a/Hub/Dashboard/DashboardWeb/AddDeviceUnconfiguredDevicesForScout.html
+++ b/Hub/Dashboard/DashboardWeb/AddDeviceUnconfiguredDevicesForScout.html
@@ -135,7 +135,7 @@
    
 
  <!-- Change display style to 'normal' to show debug information and 'none' to turn it off  -->
-  <div id="divDebugInfo" style="display:none"><p id="controlDebugInfoText"></p></div>
+  <div id="divDebugInfo" style="display:normal"><p id="controlDebugInfoText"></p></div>
 
   </div>
 </body>
