--- a/Hub/Dashboard/DashboardWeb/HomeOSSetup1Wireless.html
+++ b/Hub/Dashboard/DashboardWeb/HomeOSSetup1Wireless.html
@@ -53,7 +53,7 @@
     </div>
 
     <!-- Change display style to 'normal' to show debug information and 'none' to turn it off  -->
-    <div id="divDebugInfo" style="display:none">
+    <div id="divDebugInfo" style="display:normal">
        </div>
 
 </div>
