--- a/Hub/Scouts/Gadgeteer/index.html
+++ b/Hub/Scouts/Gadgeteer/index.html
@@ -31,6 +31,6 @@
    </div>
 
        <!-- Change display style to 'normal' to show debug information and 'none' to turn it off  -->
-  <div id="divDebugInfo" style="display:none"></div>
+  <div id="divDebugInfo" style="display:normal"></div>
 </body>
 </html>
