* adding Clock app * adding EnvironmentMonitor icon to dashboard * deleting reference to PetriNetSharp (third party dll) from EnvironmentMonitor solution

--- a/Hub/Dashboard/DashboardWeb/index.html
+++ b/Hub/Dashboard/DashboardWeb/index.html
@@ -30,6 +30,11 @@
                 <div class="media_block col" onclick="GoToHTMLPage('Settings.html')"><a>Settings</a><br />
                      <img class="app_image" alt="Settings" src="Assets/settings-icon.png" />
                 </div>
+
+                <div class="media_block col" onclick="GoToHTMLPage('EnvironmentMonitor.html')"><a>Environment Monitor</a><br />
+                     <img class="app_image" alt="Settings" src="Assets/envMonitor-icon.png" />
+                </div>
+
               
             </div>
          
