--- a/Hub/Apps/RelaySwitch/index.html
+++ b/Hub/Apps/RelaySwitch/index.html
@@ -15,7 +15,7 @@
         $(document).ready(
             function () {
                 RefreshRelaySwitch();
-                setInterval(function () { RefreshRelaySwitch() }, 2000);
+                setInterval(function () { RefreshRelaySwitch() }, 1000);
             }
         );
 
@@ -69,13 +69,13 @@
                 <div class="page_title col">RelaySwitch</div>
             </div>
             <div class="row">
-                <div id="bigtemperaturebox" style="text-align:center;width:100%;font-size:200px">
-                    <span id="relayValue"></span>&deg;
+                <div id="bigtemperaturebox" style="text-align:center;width:100%;font-size:100px">
+                    <span id="relayValue"></span>
                 </div>
             </div>
             <div class="row">
                 <div style="padding-left:100px">
-                        <input type="submit" value="Turn" onclick="SetRelaySwitch()" />
+                        <input type="submit" value="Turn" onclick="SetRelaySwitch()" width="300" height="100"/>
                     </div>
             </div>
         </div>
