--- a/Hub/Apps/RelaySwitch/index.html
+++ b/Hub/Apps/RelaySwitch/index.html
@@ -73,9 +73,9 @@
                     <span id="relayValue"></span>
                 </div>
             </div>
-            <div class="row">
+            <div>
                 <div style="padding-left:100px">
-                        <input type="submit" value="Turn" onclick="SetRelaySwitch()" width="300" height="100"/>
+                        <input type="submit" value="Turn it on/off" onclick="SetRelaySwitch()" width="300" height="100"/>
                     </div>
             </div>
         </div>
