--- a/Hub/Apps/YourOrganization.Temperature/index.html
+++ b/Hub/Apps/YourOrganization.Temperature/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
    <script type="text/javascript" src="../GuiWeb/jquery-1.7.1.js"></script>
   <script type="text/javascript" src="../GuiWeb/common.js"></script>
-  <script type="text/javascript" src='../GuiWeb/Chart.min.js'></script>
+  <script type="text/javascript" src='js/Chart.min.js'></script>
   <link rel="Stylesheet" type="text/css" href="Styles/AppAlertsStyleSheet.css" />
  
     <script>
@@ -52,6 +52,8 @@
             var l = $('#activateChartId:checked').length;
 
             if (l > 0) {
+
+                
                 var currentdate = new Date();
                 var datetime = currentdate.getDate() + "/"
                     + (currentdate.getMonth() + 1) + "/"
@@ -88,15 +90,17 @@
             }
         }
 
+        $('#activateChartId').onchange(function () {
+            $('#temperatures').toggle();
+        });
+
         function RefreshTemperatureCallback(context, result) {
             currentTemperature = result.GetTemperatureResult;
             $("#temperatureValue").text(currentTemperature.toString());
             updateColors();
 
             RefreshChart();
-
         }
-
 
 
         function updateColors() {
@@ -154,8 +158,8 @@
         </div>
 
         
-    <div id="historicalData" style="height: 300px; width:1500px;">
-        Show the last 10 historical values in the chart: <input id="activateChartId" type="checkbox" name="activateChart" value="wartość" /> <br/>
+    <div id="historicalData" style="height: 200px; width:90%;">
+        Show the last 10 historical values in the chart: <input id="activateChartId" type="checkbox" name="activateChart" value="Value" /> <br/>
 
         Historical temperatures:
         <canvas id="temperatures"></canvas>
