Home Editor first approach

--- a/Hub/Dashboard/DashboardWeb/index.html
+++ b/Hub/Dashboard/DashboardWeb/index.html
@@ -31,11 +31,10 @@
                      <img class="app_image" alt="Settings" src="Assets/settings-icon.png" />
                 </div>
 
-                <div class="media_block col" onclick="GoToHTMLPage('EnvironmentMonitor.html')"><a>Environment Monitor</a><br />
+                <div class="media_block col" onclick="GoToHTMLPage('HomeEditor.html')"><a>Environment Monitor Editor</a><br />
                      <img class="app_image" alt="Settings" src="Assets/envMonitor-icon.png" />
                 </div>
 
-              
             </div>
          
             <div class="row" id="appsInstalled"> </div>
