--- a/Hub/Tools/EnvironmentMonitor/HomeEditor.html
+++ b/Hub/Tools/EnvironmentMonitor/HomeEditor.html
@@ -15,38 +15,58 @@
             GetModules();
         });
 
-        function ReadModules() {
-            new PlatformServiceHelper().MakeServiceCall("webapp/GetModules", "", GetModulesCallback);
+        function GetModules() {
+            new PlatformServiceHelper().MakeServiceCall("webapp/GetTestMethod", "", GetTestMethodCallback);
+        }
+
+        function GetTestMethodCallback(context, result) {
+            $("#testId").text("DONE");
         }
     </script>
 
 </head>
 <body>
-    <div><h2>Home Environment Monitor -> Editor</h2></div>
-    <div> 
-        There are numer of modules running at your home. Choose one to define its states.
+        <div><h2>Home Environment -> Editor</h2></div>
+    <img src="SmartHouse.jpg" width="500" />
 
+    <div> 
+        <h3>* Rules defining</h3>
+        WHEN module 
         <select name="Modules">
             <option value="light_sensor">Light sensor</option>
-            <option value="temp_sensor" selected="selected">Temperature sensor</option>
-            <option value="light_actuator">Light bulp</option>
+            <option value="temp_sensor">Temperature sensor</option>
+            <option value="light_actuator" selected="selected">Light bulp</option>
             <option value="motion_sensor">Motion sensor</option>
         </select>
-    </div>
+        is in state
+       <select name="State">
+            <option value="cold"> < 16 </option>
+            <option value="warm" selected="selected">16-24</option>
+            <option value="hot"> > 24</option>
+        </select>
+        THEN activate module 
+        <select name="Modules2">
+            <option value="light_sensor">Light sensor</option>
+            <option value="temp_sensor">Temperature sensor</option>
+            <option value="light_actuator"  selected="selected">Light bulp</option>
+            <option value="motion_sensor">Motion sensor</option>
+        </select>
+        to state
+       <select name="State2">
+            <option value="on" selected="selected">ON</option>
+            <option value="off">OFF</option>
+        </select>
 
+    </div>
+        <button>Save</button>
     <div>
-        Attributes:
-        <ul>
-            <li>Attr 1</li>
-            <li>Attr 2</li>
-            <li>Attr 3</li>
-        </ul>
         
     </div>
 
     <hr />
+        <h3>* Rules detecting</h3>
     Write your expectation rule (ex. "When user enters a house then turn lights on"):     <textarea rows="2" cols="50"></textarea>
     <br />
-    <button>Submit</button>
+    <span id="testId" ></span>
 </body>
 </html>
