--- a/Hub/Tools/EnvironmentMonitor/HomeEditor.html
+++ b/Hub/Tools/EnvironmentMonitor/HomeEditor.html
@@ -16,7 +16,7 @@
         });
 
         function GetModules() {
-            new PlatformServiceHelper().MakeServiceCall("webapp/GetTestMethod", "", GetTestMethodCallback);
+            new PlatformServiceHelper().MakeServiceCall("webapp/GetTestMethod2", "", GetTestMethodCallback);
         }
 
         function GetTestMethodCallback(context, result) {
