--- a/Hub/Dashboard/DashboardWeb/HomeEditor.html
+++ b/Hub/Dashboard/DashboardWeb/HomeEditor.html
@@ -29,6 +29,14 @@
             new PlatformServiceHelper().MakeServiceCall("webapp/GetModuleStatesWeb", '{"name":"' + selectedValue2 + '"}', FillStatesCallback2);
         }
 
+        function CheckRule() {
+            var ruleText = document.getElementById("ruleTextId").value;
+            new PlatformServiceHelper().MakeServiceCall("webapp/CheckRuleWeb", '{"ruleText":"' + ruleText + '"}', CheckRuleCallback);
+        }
+
+        function CheckRuleCallback() {
+        }
+
         function FillAppNamesCallback(context, result) {
             $("#modules1Id").empty();
             $("#modules2Id").empty();
@@ -133,8 +141,8 @@
     <div>
         <hr />
             <h3>Rules detecting</h3>
-        Write your expectation rule (ex. "When user enters a house then turn lights on"):     <textarea rows="2" cols="50"></textarea>
-            <button>Check</button>
+        Write your expectation rule (ex. "When user enters a house then turn lights on"):     <textarea rows="2" cols="50" id="ruleTextId"></textarea>
+            <button onclick="CheckRule();">Check</button>
         <br /> <br /> <br />
         
     </div>
