--- a/Hub/Tools/EnvironmentMonitor/HomeEditor.html
+++ b/Hub/Tools/EnvironmentMonitor/HomeEditor.html
@@ -34,7 +34,15 @@
             new PlatformServiceHelper().MakeServiceCall("webapp/CheckRuleWeb", '{"ruleText":"' + ruleText + '"}', CheckRuleCallback);
         }
 
-        function CheckRuleCallback() {
+        function CheckRuleCallback(context, result) {
+            var moduleNr1 = result[0];
+            var moduleNr2 = result[1];
+
+            var selectBox = document.getElementById("modules1Id");
+            selectBox.selectedIndex = moduleNr1;
+
+            var selectBox2 = document.getElementById("modules2Id");
+            selectBox2.selectedIndex = moduleNr2;
         }
 
         function FillAppNamesCallback(context, result) {
