--- a/Hub/Tools/EnvironmentMonitor/HomeEditor.html
+++ b/Hub/Tools/EnvironmentMonitor/HomeEditor.html
@@ -124,7 +124,6 @@
 
                 var v = validationResponse.Validations[index];
                 $("#validationsId").append('ValidatorName:' + v.Name + ' result=' + v.IsValid + '</br>');
-               
             }
         }
 
@@ -138,12 +137,8 @@
             var state1 = GetSelectedState1();
             var state2 = GetSelectedState2();
 
-            //var ruleDefinitionDisplay = mod1 + '(state:' + state1 + ') -> ' + mod2 + '(state:' + state2 + ')';
             var ruleDefinition = mod1 + ',' + state1 + ',' + mod2 + ',' + state2;
             new PlatformServiceHelper().MakeServiceCall("webapp/AddRuleWeb", '{"rule":"' + ruleDefinition + '"}', EmptyCallback);
-            //$("#rulesId").append(ruleDefinitionDisplay);
-            //$("#rulesId").append('<button onclick="RemoveRule();">Remove</button>');
-            //$("#rulesId").append('<br/>');
 
             PresentRules();
         }
@@ -154,9 +149,12 @@
 
         function FillRulesCallback(context, result) {
             $("#rulesId").empty();
-            for (var i = 0; i < result.length; i++) {
-                $("#rulesId").append(result[i]);
-                $("#rulesId").append('<br/>');
+
+            var config = JSON.parse(result);
+            for (index = 0; index < config.Rules.length; ++index) {
+
+                var rule = config.Rules[index];
+                $("#rulesId").append(index + ' ' + rule.StateFrom + ' -> ' + rule.StateTo + '</br>');
             }
         }
 
